# Games-series

./: .gitignore  README.md
games101/homework0/pa0/: CMakeLists.txt  main.cpp
games101/homework1/frames/: main.cpp  rasterizer.cpp  rasterizer.hpp
games101/homework2/Assignment2/: main.cpp  rasterizer.cpp  rasterizer.hpp
games101/homework2/frames/: main.cpp  rasterizer.cpp  rasterizer.hpp
games101/homework3/Assignment3/: main.cpp  rasterizer.cpp  rasterizer.hpp
games101/homework4/Assignment4/: main.cpp
games101/homework5/Assignment5/: Renderer.cpp  Triangle.hpp  main.cpp
games101/homework6/Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
games101/homework7/Assignment7/: BVH.cpp  Bounds3.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  main.cpp
games101/homework7/test_result/: AABBfault.ppm  LdirOnly.ppm  LdirOnly_withoutSourceBound.ppm  Ldir_Lindir.ppm  high_quality.ppm  standard.ppm  standard_256.ppm
games101/homework8/Assignment8/src/: application.cpp  rope.cpp
games202/homework0/: package-lock.json
games202/homework0/src/loads/: loadOBJ.js
games202/homework0/src/materials/: PhongMaterial.js
games202/homework0/src/shaders/: InternalShader.js
games202/homework1/assets/wolf/: Wolf_One_obj.mtl  Wolf_obj.mtl
games202/homework1/src/: engine.js
games202/homework1/src/lights/: DirectionalLight.js
games202/homework1/src/shaders/phongShader/: phongFragment.glsl
